--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "babel-preset-es2015": "^6.16.0",
     "babel-preset-react": "^6.16.0",
     "babelify": "^7.3.0",
+    "extract-text-webpack-plugin": "^1.0.1",
     "mapbox-gl": "^0.25.1",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
