--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "babel-preset-es2015": "^6.16.0",
     "babel-preset-react": "^6.16.0",
     "babelify": "^7.3.0",
+    "css-loader": "^0.25.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "mapbox-gl": "^0.25.1",
     "react": "^15.3.2",
+    "react-addons-css-transition-group": "^15.3.2",
     "react-dom": "^15.3.2",
     "react-tap-event-plugin": "^1.0.0",
+    "style-loader": "^0.13.1",
     "webpack": "^1.13.2"
   },
   "devDependencies": {
